--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,51 @@
                     </archive>
                 </configuration>
             </plugin>
+            
+            <!-- Launch4j plugin to create Windows executable -->
+            <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <version>2.5.0</version>
+                <executions>
+                    <execution>
+                        <id>l4j-clui</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <headerType>gui</headerType>
+                            <outfile>target/nfm-lit.exe</outfile>
+                            <jar>target/nfm-lit-1.0-SNAPSHOT.jar</jar>
+                            <dontWrapJar>false</dontWrapJar>
+                            <errTitle>NFM-Lit Error</errTitle>
+                            <classPath>
+                                <mainClass>nfm.lit.RunApp</mainClass>
+                                <addDependencies>false</addDependencies>
+                                <preCp>lib/*</preCp>
+                            </classPath>
+                            <jre>
+                                <minVersion>11.0.0</minVersion>
+                                <opts>
+                                    <opt>-Djava.library.path=lib/dlls/win64</opt>
+                                </opts>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>1.0.0.0</fileVersion>
+                                <txtFileVersion>1.0.0</txtFileVersion>
+                                <fileDescription>Need For Madness: LIT</fileDescription>
+                                <copyright>NFM-Lit</copyright>
+                                <productVersion>1.0.0.0</productVersion>
+                                <txtProductVersion>1.0.0</txtProductVersion>
+                                <productName>NFM-Lit</productName>
+                                <internalName>nfm-lit</internalName>
+                                <originalFilename>nfm-lit.exe</originalFilename>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
